<resources>
    <string name="app_name">Toeat</string>
    <string name="google_maps_api_key">AIzaSyBPhvi58IYjcQFfiw7RK4Q8jThBpIU4778</string>
    <string name="google_maps_api_key_browser">AIzaSyAzTyx-WgeUSZ1RiTOxEpL2aCr_gpFRHT8</string>

    //invite
    <string name="accept">Accept</string>

    //group list
    <string name="group">Groups</string>
    <string name="status">Status:</string>
    <string name="scheduled">Scheduled</string>

    //login
    <string name="log_in">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_time_here">First time here?</string>
    <string name="google_plus_icon">Google plus icon</string>
    <string name="facebook_plus_icon">Facebook plus icon</string>

    //drawer menu
    <string name="groups">Groups</string>
    <string name="about">About</string>
    <string name="invites">Invites</string>
    <string name="logout">logout</string>
    <string name="settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    //about page
    <string name="version">Version:</string>
    <string name="contact_us">Contact us</string>
    <string name="follow_us_on_facebook">Follow us on facebook</string>
    <string name="rate_us_on_play_store">Rate us on Play Store</string>
    <string name="globe_amp_i"><![CDATA[Globe & I]]></string>
    <string name="about_desc">Toeat App was made by Globe and I studio.</string>
    <string name="follow_us_on_twitter">Follow us on twitter</string>

    //settings
    <string name="invisible">Invisible</string>
    <string name="invisible_description">Don\'t allow invitations from groups</string>
    <string name="notifications">Notifications</string>
    <string name="notification_desc">Don\'t receive anotifications</string>

    //create group
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="img_btn_group">set group image</string>
    <string name="create_group">Create Group</string>

    //trip
    <string name="trip">Trip</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="join_trip">Join Trip</string>
    <string name="here_are_the_users_going_to_eat">Users going to eat:</string>
    <string name="voting_phase">VOTING PHASE</string>
    <string name="vote">Vote</string>
    <string name="countdown">Countdown:</string>
    <string name="restaurant">Restaurant:</string>
    <string name="get_directions">Get Directions</string>
    <string name="view_voting_results">View voting place</string>
    <string name="group_members">Group Members:</string>

    //trip create
    <string name="trip_name">Enter trip name</string>
    <string name="select_date_of_the_trip">Trip date</string>
    <string name="at_whats_time">Trip time</string>
    <string name="place_to_eat">Place to eat:</string>
    <string name="view_nearby_places_to_eat">Pick place to eat</string>
    <string name="enter_restaurant_name">Enter restaurant name</string>
    <string name="create_trip">Create trip</string>
    <string name="turn_off_voting">Turn off Voting</string>
    <string name="trip_history">Trip History</string>

    //register
    <string name="create_account">Account</string>
    <string name="picture_upload">Upload picture</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="profile_image">profile image</string>
    <string name="description">Description:</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="sort_by_distance">Sort by Distance</string>
    <string name="sort_by_restaurant">Sort by Restaurant</string>
    <string name="empty_group_list">Hey there!, no groups to go an eat!</string>
    <string name="empty_list_event_label">Click here to create one!?</string>
    <string name="trip_has_not_been_created_yet">Trip has not been created yet!</string>
    <string name="create_a_trip">Create a trip</string>
    <string name="invalid_registration_fields">Please provide a valid username, email, or password</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="incorrect_credentials">Incorrect username or password</string>
    <string name="group_creation_desscription">By creating a group you are the administrator by default.
        You will be in charge of planning trips and adding others users to the group. Note: administrator
        privilage can be changed.</string>
    <string name="group_name_valid">Invalid Group Name</string>
    <string name="group_desc_valid">Invalid Group Validation</string>
    <string name="user_profile_picture">user profile picture</string>
    <string name="carpooling">Carpooling:</string>
    <string name="leave_group">Leave Group</string>
    <string name="voting_mode">Voting mode</string>
    <string name="voting_mode_desc">Pick four restaurants based on your location in which user will vote for.</string>
    <string name="carpool_mode">Carpool mode</string>
    <string name="carpool_mode_desc">App will decide who drive during the trip.Driver will vary accordingly in each trip.</string>
    <string name="date_picker_positive_btn">Ok</string>
    <string name="datepicker_negative_btn">Cancel</string>
    <string name="search_restaurant_hint">Enter name of restaurant</string>
    <string name="submit_trip">Submit Trip</string>
    <string name="search_for_nearby_restaurants">Search for nearby Restaurants</string>
    <string name="search_button">search button</string>
    <string name="restaurant_icon">restaurant icon</string>
    <string name="rating">rating:</string>
    <string name="select_number_of_item">Select number of Item</string>
    <string name="voting_model">Voting Mode:</string>
    <string name="toeat_icon">Toeat Icon</string>
    <string name="toeatSlogan">Because eating alone is never fun...</string>
    <string name="location">Location:</string>


    <!--Voting dialog-->
    <string name="dialog_msg">Are you sure you want to vote for %s ?</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="unjoin">Un-join</string>
    <string name="join">join</string>
    <string name="search_for_user">Search for user...</string>
    <string name="title_activity_search">search</string>
    <string name="searcheable_hint">Search for user...</string>
    <string name="profile_picture">Profile picture</string>
    <string name="user_add_icon">user add icon</string>
    <string name="view_profile">View Profile</string>
    <string name="network_snackbar_message">Network is not found</string>
    <string name="back_button">back button</string>
    <string name="star_image">star image</string>

    <!--Scheduler -->
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="trip_user_count_icon">trip subscribed count icon</string>
    <string name="address">Address</string>

    <string name="group_name_limit">/ 20</string>
    <string name="group_desc_limit">/ 25</string>
    <string name="username_limit">/ 25</string>
    <string name="invite">Invite</string>
    <string name="uninvite">uninvite</string>
    <string name="mm_dd_yyyy">mm-dd-yyyy</string>
    <string name="hh_mm">hh:mm</string>
    <string name="trip_title_counter_limit">/ 20</string>
    <string name="alert_icon">alert icon</string>
    <string name="close_icon">close icon</string>
    <string name="restaurant_selection">Restaurant selection</string>
    <string name="voting">Voting:</string>
    <string name="vote_submited">Vote submitted</string>
    <string name="empty_trip_history_list">No Trip Histoy registered</string>
    <string name="empty_upcoming_trip">No upcoming trips scheduled</string>
    <string name="beta_unavailable">Un-available at version beta</string>
    <string name="no_invitation_received">No invitation received</string>
    <string name="search">Search</string>
    <string name="trip_time_result_info">Results will be displayed 3 hours prior the trip time.</string>

</resources>
