<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navItemGroups"
            android:checked="true"
            android:icon="@drawable/ic_group"
            android:title="@string/groups"
            
            />

        <item
            android:id="@+id/navItemInvites"
            android:icon="@drawable/ic_group_invites"
            android:title="@string/invites"
            />
        <item
            android:id="@+id/navItemAbout"
            android:icon="@drawable/ic_about"
            android:title="@string/about"
            />

        <!--<item-->
            <!--android:id="@+id/navItemSetting"-->
            <!--android:icon="@drawable/ic_settings"-->
            <!--android:title="@string/settings"-->
            <!--/>-->

        <item
            android:id="@+id/navItemLogout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            />

    </group>
</menu>