<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.globeandi.toeat.ui.search.SearchUserItemViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btnImageProfile"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/transparent"
            android:contentDescription="@string/profile_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.userName}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnImageProfile"
            app:layout_constraintStart_toStartOf="@+id/btnImageProfile"
            tools:text="Test64"/>

        <android.support.design.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:onClick="@{()->viewModel.onSendInviteButtonPressed()}"
            android:text="@string/invite"
            android:visibility="@{viewModel.isInvited ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/materialButton"
            app:layout_constraintEnd_toStartOf="@+id/materialButton"
            app:layout_constraintStart_toEndOf="@+id/btnImageProfile"
            app:layout_constraintTop_toTopOf="@+id/materialButton"/>

        <android.support.design.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:onClick="@{()->viewModel.onSendUninviteButtonPressed()}"
            android:text="@string/uninvite"
            android:textColor="@color/error_color"
            android:visibility="@{viewModel.isInvited ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/materialButton"
            app:layout_constraintEnd_toStartOf="@+id/materialButton"
            app:layout_constraintStart_toEndOf="@+id/btnImageProfile"
            app:layout_constraintTop_toTopOf="@+id/materialButton"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            android:onClick="@{()->viewModel.onViewProfileButtonPressed()}"
            android:text="@string/view_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    </android.support.constraint.ConstraintLayout>
</layout>